# clinical-nlp-ner

./: README.md  pyproject.toml
configs/: ner_biobert.yaml
data/processed/: labels.json
data/processed/test/: data-00000-of-00001.arrow  state.json
data/processed/train/: data-00000-of-00001.arrow  dataset_info.json  state.json
data/processed/validation/: data-00000-of-00001.arrow  state.json
scripts/: download_bc5cdr.sh  run_eval.sh  run_train.sh
src/: app.py  data.py  eval.py  infer.py  model.py  train.py
src/clinical_nlp_ner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_data.py  test_infer.py  test_model.py
